# treesearch

./: .env  .gitignore  AGENTS.md  API.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GIL_OPTIMIZATION_SUMMARY.md  LICENSE  PHASE_0_PROGRESS.md  README.md  collostruct.py  help.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pypi.yml  test.yml
benches/: coha.rs  coha_io.rs  conllu.rs
docs/: api.md  index.md  internals.md  query-language.md  tutorial.md
docs/advanced/: architecture.md  performance.md
docs/api/: functions.md  overview.md  pattern.md  tree-word.md  treebank.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: multi-file.md  query-language.md  reading-trees.md  results.md  searching.md
docs/workflows/: constructions.md  examples.md  frequency.md
examples/: b.rs  collostruct.py  debug_latwp.rs  dependent_lookup.rs  docs.ipynb  end_to_end.rs  goget.py  help.py  help_bench.rs  hungarian.ipynb  iterators.rs  latwp.rs  latwp_par.rs  python_example.py  query_example.rs  scratch.ipynb  test_find_path.py  test_gzip.rs  test_par_count.rs  test_python_bindings.py  tryit.py  unconstrained_deprel.rs
examples/UD_English-ParTUT-r2.17/: README.md
plans/: DOCUMENTATION_GUIDE.md  DOCUMENTATION_MAINTENANCE.md  EXCEPT_OPTIONAL_PLAN.md  EXCEPT_OPTIONAL_TASKS.md  PARSING_OPTIMIZATION_PLAN.md  PHASE_0_IMPLEMENTATION_PLAN.md  PHASE_1_PLAN.md  PHASE_1_PLAN.md.archived  PROJECT_SUMMARY.md  PYPI_RELEASE.md  ROADMAP.md  SETUP_NOTES.md  STATUS.md  pattern_matching_vm_design.md
python/treesearch/: __init__.py  treesearch.pyi
src/: bytes.rs  compiler.rs  conllu.rs  index.rs  iterators.rs  lib.rs  parser.rs  pattern.rs  python.rs  query.pest  query.rs  query_grammar.pest  searcher.rs  tree.rs  vm.rs
tests/: test_python_bindings.py
