[package]
name = "treesearch"
version = "0.1.0"
edition = "2024"
authors = ["Rob Malouf"]
description = "High-performance toolkit for querying linguistic dependency parses"
license = "MIT"

[lib]
name = "treesearch"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", optional = true }
#memchr = "2.7"
#rayon = "1.11"
pest = "2.8"
pest_derive = "2.8"
lasso = { version = "0.7", features = ["multi-threaded", "inline-more"]}

[features]
# Default features for Rust-only builds
default = []

# Python extension module (automatically enabled by maturin)
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
# Testing utilities
#criterion = "0.7"
divan = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[profile.dev]
opt-level = 0

[[bench]]
name = "conllu"
harness = false