[package]
name = "treesearch"
version = "0.1.0"
edition = "2024"
authors = ["Rob Malouf"]
description = "High-performance toolkit for querying linguistic dependency parses"
license = "MIT"

[lib]
name = "treesearch"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", optional = true }
pest = "2.8"
pest_derive = "2.8"
rustc-hash = "2.1"
flate2 = { version = "1.1", features = ["zlib-rs"] }
mimalloc = { version = "0.1", features = ["v3"] }
hashbrown = "0.16"
glob = "0.3"
rayon = "1.11.0"
thiserror = "2.0"

[features]
# Default features for Rust-only builds
default = []

# Python extension module (automatically enabled by maturin)
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
# Testing utilities
#criterion = "0.7"
divan = "0.1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[profile.dev]
opt-level = 0

[[bench]]
name = "conllu"
harness = false

[[bench]]
name = "coha"
harness = false