[package]
name = "treesearch-ud"
version = "0.2.0-dev"
edition = "2024"
authors = ["Rob Malouf"]
description = "High-performance toolkit for querying linguistic dependency parses"
license = "MIT"

[lib]
name = "treesearch"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", features = ["abi3-py312"] }
pest = "2.8"
pest_derive = "2.8"
rustc-hash = "2.1"
flate2 = { version = "1.1", features = ["zlib-rs"] }
hashbrown = "0.16"
rayon = "1.11"
glob = "0.3"
thiserror = "2.0"
crossbeam-channel = "0.5"
fastbit = "0.11"

[features]
default = [ ]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
divan = "0.1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[[bench]]
name = "conllu"
harness = false

[[bench]]
name = "coha"
harness = false

[[bench]]
name = "coha_io"
harness = false
