[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "treesearch"
version = "0.1.0"
description = "High-performance toolkit for querying linguistic dependency parses"
authors = [
    {name = "Rob Malouf", email = "rmalouf@sdsu.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["nlp", "linguistics", "dependency-parsing", "corpus-linguistics", "treebank"]
dependencies = [
    "cytoolz>=1.1.0",
    "joblib>=1.5.2",
    "joblib-progress>=1.0.6",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "spacy>=3.8.11",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/rmalouf/treesearch"
Repository = "https://github.com/rmalouf/treesearch"

[dependency-groups]
dev = [
    "maturin>=1.10.1",
    "pytest>=9.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "treesearch"
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
