[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "treesearch-ud"
dynamic = ["version"]
description = "High-performance toolkit for querying linguistic dependency parses"
authors = [
    {name = "Rob Malouf", email = "rmalouf@sdsu.edu"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
keywords = ["nlp", "linguistics", "dependency-parsing", "corpus-linguistics", "treebank"]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/rmalouf/treesearch"
Repository = "https://github.com/rmalouf/treesearch"
Documentation = "https://rmalouf.github.io/treesearch/"
Issues = "https://github.com/rmalouf/treesearch/issues"

[project.optional-dependencies]
dev = [
    "maturin>=1.10.1",
    "pytest>=9.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
viz = [
    "spacy>=3.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "treesearch"
python-source = "python"
bindings = "pyo3"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
